# anomaly-grid-py

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  benchmark.ipynb  pyproject.toml  test_basic_functionality.py
.github/workflows/: ci.yml  release.yml
python/anomaly_grid_py/: __init__.py  __init__.pyi  core.py  utils.py
src/: detector.rs  lib.rs
tests/: test_anomaly_detector.py  test_edge_cases.py  test_performance.py
tests/domain/: __init__.py  run_all_domain_tests.py  test_domain_1_markov_chain_mathematics.py  test_domain_2_probability_theory.py  test_domain_4_anomaly_detection_logic.py  test_domain_5_sequence_analysis.py
